Override link colors for callout sections so there aren't contrast issues with the theme.
RELNOTES=n/a

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=314203830

--- a/_sass/themes/_orange.scss
+++ b/_sass/themes/_orange.scss
@@ -27,7 +27,7 @@
     background: $c__deep-orange;
   }
 
-  .c-article__main a:not(.c-btn) {
+  .c-article__main :not(.c-callouts__note):not(.c-callouts__warning) > a:not(.c-btn) {
     color: $c__deep-orange;
   }
 
